--- a/style.css
+++ b/style.css
@@ -2,42 +2,82 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-  }
-  
-  h1 {
+}
+
+h1 {
     text-align: center;
     padding: 20px;
     background-color: #333;
     color: #fff;
-  }
-  
-  form {
+}
+
+form {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
-  }
-  
-  label {
+}
+
+label {
     margin-top: 20px;
-  }
-  
-  select {
+}
+
+select {
     padding: 10px;
     margin-top: 5px;
-  }
-  
-  input[type="submit"] {
+}
+
+input[type="submit"] {
     padding: 10px 20px;
     margin-top: 20px;
     background-color: #333;
     color: #fff;
     border: none;
     cursor: pointer;
-  }
-  
-  #configured-pc {
+}
+
+#configured-pc {
     margin-top: 20px;
     padding: 20px;
     border: 1px solid #333;
-  }
+}
+
+select {
+    border-radius: 50px;
+    width: 130px;
+    height: 40px;
+    color: #fff;
+    border-radius: 5px;
+    padding: 10px 25px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 500;
+    background: transparent;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    position: relative;
+    display: inline-block;
+    box-shadow: inset 2px 2px 2px 0px
+}
+
+option {
+    background-color: black;
+}
+
+select {
+    background: rgb(96, 9, 240);
+    background: linear-gradient(0deg, rgba(96, 9, 240, 1) 0%, rgba(129, 5, 240, 1) 100%);
+    border: none;
+
+}
+
+select:before {
+    height: 0%;
+    width: 2px;
+}
+
+select:hover {
+    box-shadow: 4px 4px 6px 0 rgba(255, 255, 255, .5),
+        -4px -4px 6px 0 rgba(116, 125, 136, .5),
+        inset -4px -4px 6px 0 rgba(255, 255, 255, .2),
+        inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
+}
